--- a/navy/index.html
+++ b/navy/index.html
@@ -3163,6 +3163,11 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
         .vc_custom_1475776597409 {
             margin-top: -30px !important;
         }
+
+        @media (max-width: 479px){
+            .unreqmaxwidth {
+            max-width: 100% !important;
+        }}
     </style><noscript><style> .wpb_animate_when_almost_visible { opacity: 1; }</style></noscript></head>
 
 <body class="home page-template-default page page-id-7  notMobile   isDesktop  wpb-js-composer js-comp-ver-6.1 vc_responsive">
@@ -3596,7 +3601,7 @@ var lasttop = winw,
     </div>
     
 
-    <div id="services" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004836925 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving">
+    <div id="services" style="padding-bottom: 5px !important;" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004836925 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving">
     <div class="wpb_column vc_column_container vc_col-sm-12">
                                     <div class="vc_column-inner">
                                         <div class="wpb_wrapper">
@@ -4229,42 +4234,18 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 <!--Newsss STARTS-->
 
 <section class="section">
-    <div class="container">
+    <div class="container unreqmaxwidth">
         <div class="row">
             <div class="col-12 text-center">
                 <div class="section-title mb-4 pb-2">
                     <h2 class="heading font-weight-bold mt-4 mb-3">Latest News</h2>
-                    <p class="text-muted para-desc mx-auto mb-0">Pravishya in online newspapers &amp; blogs.</p>
+                    <p class="text-muted para-desc mx-auto mb-0">SolCare in online newspapers &amp; blogs.</p>
                 </div>
             </div><!--end col-->
         </div><!--end row-->
 
 
         <div class="row">
-            <div class="col-lg-6 col-12 mb-4 pb-2">
-                <div class="card blog rounded border-0 shadow overflow-hidden">
-                    <div class="row align-items-center no-gutters">
-                        <div class="col-md-6">
-                            <img src="images/blog/01.jpg" class="img-fluid" alt="">
-                            <div class="overlay bg-dark"></div>
-                            <div class="author">
-                                <small class="text-light user d-block"><i class="fa fa-account"></i>Admin</small>
-                                <small class="text-light date"><i class="fa fa-calendar-check"></i> 15th August, 2020</small>
-                            </div>
-                        </div><!--end col-->
-
-                        <div class="col-md-6">
-                            <div class="card-body content">
-                                <h5><a href="javascript:void(0)" class="card-title title text-dark">COVID-19 safety shield for vehicles: Hyderabad startup's innovation in demand</a></h5>
-                                <p class="text-muted mb-0">Ever since the pandemic began people are worried about heading out. Be it for work or buying essentials, people are avoiding public...</p>
-                                <div class="post-meta d-flex justify-content-between mt-3">
-                                    <a href="https://www.thenewsminute.com/article/covid-19-safety-shield-vehicles-hyderabad-startups-innovation-demand-130793" class="text-muted readmore">Read More <i class="fa fa-chevron-right"></i></a>
-                                </div>
-                            </div>
-                        </div><!--end col-->
-                    </div> <!--end row-->
-                </div><!--end blog post-->
-            </div><!--end col-->
 
             <div class="col-lg-6 col-12 mb-4 pb-2">
                 <div class="card blog rounded border-0 shadow overflow-hidden">
@@ -4274,13 +4255,13 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
                                 <h5><a href="javascript:void(0)" class="card-title title text-dark">WeSchool hosts NASA space apps challenge for Maharashtra and Karnataka</a></h5>
                                 <p class="text-muted mb-0">Welingkar Institute of Management Development and Research (WeSchool) has collaborated with NASA International Space Apps Challenge...</p>
                                 <div class="post-meta d-flex justify-content-between mt-3">
-                                    <a href="https://bloncampus.thehindubusinessline.com/b-school-corner/weschool-hosts-nasa-space-apps-challenge-for-maharashtra-and-karnataka/article32836341.ece" class="text-muted readmore">Read More <i class="fa fa-chevron-right"></i></a>
+                                    <a href="https://bloncampus.thehindubusinessline.com/b-school-corner/weschool-hosts-nasa-space-apps-challenge-for-maharashtra-and-karnataka/article32836341.ece" target="_blank" class="text-muted readmore">Read More <i class="fa fa-chevron-right"></i></a>
                                 </div>
                             </div>
                         </div><!--end col-->
                         
                         <div class="col-md-6 order-1 order-md-2">
-                            <img src="images/blog/02.jpg" class="img-fluid" alt="">
+                            <img src="news/post_1.jpg" class="img-fluid" alt="">
                             <div class="overlay bg-dark"></div>
                             <div class="author">
                                 <small class="text-light user d-block"><i class="fa fa-account"></i>Admin</small>
@@ -4295,27 +4276,27 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
                 <div class="card blog rounded border-0 shadow overflow-hidden">
                     <div class="row align-items-center no-gutters">
                         <div class="col-md-6">
-                            <img src="images/blog/03.jpg" class="img-fluid" alt="">
+                            <img src="news/post_2.jpeg" class="img-fluid" alt="">
                             <div class="overlay bg-dark"></div>
                             <div class="author">
                                 <small class="text-light user d-block"><i class="fa fa-account"></i>Admin</small>
-                                <small class="text-light date"><i class="fa fa-calendar-check"></i> 12th October, 2020</small>
+                                <small class="text-light date"><i class="fa fa-calendar-check"></i> 30th January, 2021</small>
                             </div>
                         </div><!--end col-->
 
                         <div class="col-md-6">
                             <div class="card-body content">
-                                <h5><a href="javascript:void(0)" class="card-title title text-dark">S.P. Mandali’s WeSchool hosts the all- virtual NASA International Space Apps Challenge 2020</a></h5>
-                                <p class="text-muted mb-0">Mumbai: S. P. Mandali’s Prin. L. N. Welingkar Institute of Management Development and Research (WeSchool), India’s leading B-School...</p>
+                                <h5><a href="javascript:void(0)" class="card-title title text-dark">9 RELEVANT STARTUPS FROM SCHOOLS AND COLLEGES</a></h5>
+                                <p class="text-muted mb-0">With the bundle of enthusiasm & passion to do something new, comes a lot of challenges which aren’t foreseen. Being a student prioritising startups and personal time is a tough call to make, considering the rate of increasing startups & its challenges. So today, Pehia decided to recognise and feature some of the tremendously hard-working entrepreneurs in support of them.</p>
                                 <div class="post-meta d-flex justify-content-between mt-3">
-                                    <a href="https://indiaeducationdiary.in/s-p-mandalis-weschool-hosts-the-all-virtual-nasa-international-space-apps-challenge-2020-for-maharashtra-and-karnataka-in-collaboration-with-space-india-team-and-pravishya-tech/" class="text-muted readmore">Read More <i class="fa fa-chevron-right"></i></a>
+                                    <a href="https://medium.com/@pehiaorg/9-relevant-startups-from-schools-and-colleges-95107e9c4b00" target="_blank" class="text-muted readmore">Read More <i class="fa fa-chevron-right"></i></a>
                                 </div>
                             </div>
                         </div><!--end col-->
-
                     </div> <!--end row-->
-                </div>
-            </div>
+                </div><!--end blog post-->
+            </div><!--end col-->
+
 
             <div class="col-lg-6 col-12 mb-4 pb-2">
                 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6761816560853221376" height="693" width="504" frameborder="0" allowfullscreen="" title="Embedded post" class="if"></iframe>
@@ -4338,7 +4319,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 </section>
 
 
-<!--Newsss-->
+<!--Newsss ENDS-->
 
 
                             <div id="contact" style="padding-top: 0 !important; padding-bottom: 10px !important;"data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image=""
