--- a/navy/index.html
+++ b/navy/index.html
@@ -4056,13 +4056,13 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 <div class="wpb_wrapper">
 <div class="wpb_single_image wpb_content_element vc_align_left  wpb_animate_when_almost_visible wpb_right-to-left right-to-left">
 
-<center><img src="team/1.png" style="border-radius: 50% 50% 50% 50%;width: 50%;"></center>
+<center><img src="team/7.jpg" style="border-radius: 50% 50% 50% 50%;width: 50%;"></center>
 </div>
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1475774506946">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">KARTHIKA G.S.</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">HR</span></h6>
+<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">BHAGYASREE VS</span></h4>
+<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">HR & Business Administrator</span></h6>
 
 </div>
 </div>
@@ -4077,7 +4077,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 </div>
 </div>
 </div>
-<div class="vc_btn3-container  wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_btn3-center vc_custom_1475774723977"><a href="#contact"style="background-color:#1974d2; color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-round vc_btn3-style-custom">SEND YOUR FEEDBACK</a></div>
+<div class="vc_btn3-container  wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_btn3-center vc_custom_1475774723977"><a href="#contact"style="background-color:rgb(115 95 236); color:#ffffff;" class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-round vc_btn3-style-custom">SEND YOUR FEEDBACK</a></div>
 </div>
 </div>
 </div>
@@ -4371,7 +4371,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 />
 <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Message"></textarea></span><br
                         />
-                <input type="submit" value="SEND" class="wpcf7-form-control wpcf7-submit" /></p>
+                <input type="submit" style="background-color: rgb(115 95 236);"value="SEND" class="wpcf7-form-control wpcf7-submit" /></p>
                  <div class="wpcf7-response-output wpcf7-display-none"></div>
                                     </form>
                                 </div>
@@ -4421,7 +4421,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
         
         <!--Footer STARTS-->
 
-        <footer class="footer" style="background: #202942;
+        <footer class="footer" style="background: #271738;
         padding: 60px 0;
         position: relative;
         color: #adb5bd;">
