--- a/navy/index.html
+++ b/navy/index.html
@@ -3397,7 +3397,7 @@ style="z-index:14;font-family:Montserrat;">Solution made<br><div class="unreqmsp
                                     </div>
                                 </div>
                             </div>
-<div id="process" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004822092 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving " style="padding-bottom: 50px !important;">
+<div id="process" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004822092 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving " style="padding-bottom: 50px !important; padding-left: 0px !important; padding-right: 0px !important;">
     <div class="wpb_column vc_column_container vc_col-sm-6">
         <img src="about.jpg"  alt="img" > 
 
