--- a/navy/index.html
+++ b/navy/index.html
@@ -448,6 +448,10 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
             .mobmarg2{
                 margin-top: 70px !important;
             }
+            .unreqlpad{
+                padding-left: 0px !important;
+                padding-right: 0px !important;
+            }
             }
         @media (min-width: 678px) {
             .unreqdspace {
@@ -3171,6 +3175,10 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
         }
 
         @media (max-width: 479px){
+            .unreqlpad{
+                padding-left: 0px !important;
+                padding-right: 0px !important;
+            }
             .unreqmaxwidth {
             max-width: 100% !important;
         }}
@@ -3241,7 +3249,7 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
 
             <div id="parent-dont-edit-set-as-front-page" class="pagesection row  " style="      ">
                 <div class="vc_col-md-12">
-                    <div class="container">
+                    <div class="container unreqmaxwidth">
                         <div class="slideContent gu12">
                             <div class="vc_row wpb_row vc_row-fluid">
                                 <div class="wpb_column vc_column_container vc_col-sm-12">
@@ -3397,7 +3405,7 @@ style="z-index:14;font-family:Montserrat;">Solution made<br><div class="unreqmsp
                                     </div>
                                 </div>
                             </div>
-<div id="process" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004822092 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving " style="padding-bottom: 50px !important; padding-left: 0px !important; padding-right: 0px !important;">
+<div id="process" data-vc-full-width="true" data-vc-full-width-init="false" data-vc-parallax="1.5" data-vc-parallax-image="" class="vc_row wpb_row vc_row-fluid vc_custom_1478004822092 vc_row-has-fill vc_row-o-full-height vc_row-o-columns-middle vc_row-o-content-middle vc_row-flex vc_general vc_parallax vc_parallax-content-moving unreqlpad " style=" padding-bottom: 30px !important; ">
     <div class="wpb_column vc_column_container vc_col-sm-6">
         <img src="about.jpg"  alt="img" > 
 
