--- a/navy/index.html
+++ b/navy/index.html
@@ -438,6 +438,9 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
         .servhd_color{
             color: #5ABA47;
         }
+        .teamhd_color{
+            color: #5ABA47;
+        }
                     
         @media (max-width: 678px) {
             .dispdivm{
@@ -3957,8 +3960,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1475774440922">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">ABHIJITH R</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">Founder & CEO</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color">ABHIJITH R</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color">Founder & CEO</span></h6>
 
 </div>
 </div>
@@ -3983,8 +3986,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_custom_1475774466116">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">ANANTHU A</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">Co Founder & CTO</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color"">ANANTHU A</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color"">Co Founder & CTO</span></h6>
 
 </div>
 </div>
@@ -4008,8 +4011,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1475774506946">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">ASHISH MATHEW VARGHESE</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">CMO</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color"">ASHISH MATHEW VARGHESE</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color"">CMO</span></h6>
 
 </div>
 </div>
@@ -4036,8 +4039,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1475774440922">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">SOORAJ S KUMAR</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">CMO</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color"">SOORAJ S KUMAR</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color"">CMO</span></h6>
 
 </div>
 </div>
@@ -4062,8 +4065,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_custom_1475774466116">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">ARONE S NINAN</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">CIO</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color"">ARONE S NINAN</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color"">CIO</span></h6>
 
 </div>
 </div>
@@ -4087,8 +4090,8 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
 
 <div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1475774506946">
 <div class="wpb_wrapper">
-<h4 style="text-align: center;"><span style="color: rgb(58 33 208);">BHAGYASREE VS</span></h4>
-<h6 style="text-align: center;"><span style="color: rgb(58 33 208);">HR & Business Administrator</span></h6>
+<h4 style="text-align: center;"><span class="teamhd_color"">BHAGYASREE VS</span></h4>
+<h6 style="text-align: center;"><span class="teamhd_color"">HR & Business Administrator</span></h6>
 
 </div>
 </div>
@@ -4475,7 +4478,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
         
         <!--Footer STARTS-->
 
-        <footer class="footer" style="background: #271738;
+        <footer class="footer" style="background: #0a2505;
         padding: 60px 0;
         position: relative;
         color: #adb5bd;
