--- a/navy/index.html
+++ b/navy/index.html
@@ -3291,7 +3291,7 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-7">
                         <div class="title-heading">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="logo/SolcNav.png" height="150" alt="Pravishya">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="logo/solcare new logo.png" height="150" alt="SolCare>
                             <h4 class="heading font-weight-bold mt-4 mb-3" style="color: black !important;">Solution made <span class="element" style="color:#5ABA47  !important;" >with Care</span><span class="typed-cursor"></span></h4>
                             <p class="para-desc text-muted"> <span class="text-dark font-weight-bold">Creating solutions to all your digital problems.</span>.</p>
                         
