--- a/navy/index.html
+++ b/navy/index.html
@@ -445,6 +445,9 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
         }
                     
         @media (max-width: 678px) {
+            .lesspadd{
+                padding-top: 110px !important;
+            }
             .mlogo{
                 padding-top: 9px !important;
                 padding-left: 4px !important;
@@ -3291,7 +3294,7 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
                     <div class="container unreqmaxwidth unreqlrpad">
                         <div class="slideContent gu12">
                             <!--HOMEEEEEEEEEEEEEEEEEEEEEEEEE-->
-         <section class="bg-half-170  border-bottom d-table w-100" id="home">
+         <section class="bg-half-170  border-bottom d-table w-100 lesspadd" id="home">
             <div class="container unreqmaxwidth">
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-7">
@@ -4285,7 +4288,7 @@ class="vc_row wpb_row vc_row-fluid vc_custom_1478004850374 vc_row-has-fill vc_ro
             </div>
 
             <div class="col-lg-6 col-12 mb-4 pb-2">
-                <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6761471798409330688" height="678" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6761471798409330688" height="678" width="504" frameborder="0" allowfullscreen="" title="Embedded post"  class="if"></iframe>
             </div>
             <!--  LINKDIN EMBEDS
             <div class="col-lg-6 col-12 mb-4 pb-2">
