--- a/navy/index.html
+++ b/navy/index.html
@@ -452,7 +452,7 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
                 padding-top: 9px !important;
                 padding-left: 4px !important;
             }
-            }
+            
             .dispdivm{
                 display:flex !important;
             }
@@ -484,6 +484,9 @@ content="At SolCare Technologies, we aim to offer the best solutions to cater to
             }
             }
         @media (min-width: 678px) {
+            .navstyle{
+                border-bottom: solid 2px rgb(101, 199, 71);
+            }
             .formarg{
                 margin-top:50px !important;
                 margin-left: 70px !important;
